--- a/testpay/templates/testpay/testPc2app.html
+++ b/testpay/templates/testpay/testPc2app.html
@@ -591,7 +591,7 @@
 
                     window.open(
                         "https://dev-pay.cjone.com/qr/?reqId=" + this.callQrPage_req.pmtReqId + "&mchtId=" + this.callQrPage_req.merchantId + "&qrCd=" + this.callQrPage_req.qrCd
-                            + "&redirect=" + "http://127.0.0.1:8000/testpay/redirect"
+                            + "&redirect=" + "http://10.184.165.246:9999/testpay/redirect"
                         ,"CJ ONE PAY"
                         ,`width=${ww}, height=${wh}, top=${top}, left=${left}`
                     );
@@ -612,7 +612,7 @@
 
                     window.open(
                         "https://dev-pay.cjone.com/bridge/?reqId=" + this.callQrPage_req.pmtReqId + "&mchtId=" + this.callQrPage_req.merchantId + "&qrCd=" + this.callQrPage_req.qrCd
-                            + "&redirect=" + "http://127.0.0.1:8000/testpay/redirect"
+                            + "&redirect=" + "http://10.184.165.246:9999/testpay/redirect",
                         "CJ ONE PAY",
                         `width=${ww}, height=${wh}, top=${top}, left=${left}`
                     );
