--- a/testpay/templates/testpay/redirectUrl.html
+++ b/testpay/templates/testpay/redirectUrl.html
@@ -10,14 +10,6 @@
             text-align: center;
             background-color: #ddd;
         }
-        .inputBox {
-            margin: auto;
-            width: 50%;
-            background: white;
-            height: 50px;
-            border-radius: 50px;
-            line-height: 50px;
-        }
 
     </style>
 </head>
@@ -27,34 +19,24 @@
 
         <h1>CJ One Pay Test Redirect Page</h1>
         <strong>Redirect Value</strong>
-
-        <div class="inputBox" >
+            <br/>
             <input type="text" placeholder="pmtReqId" v-model="params.pmtReqId">
-            <input type="text" placeholder="succYn" v-model="params.succYn">
+            <br/>
+            <input type="text" placeholder="succYN" v-model="params.succYN">
 
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script>
-
-        let params = new URL(document.location).searchParams;
-        //let pmtReqId = params.get("pmtReqId")
-        //let succYn = param.get("succYn")
-        //params.pmtReqId= pmtReqId
-        vm.params.succYn= "aaaa"
-
-
-
         var vm = new Vue({
             delimiters: ['{', '}'],
             el: '#redirect',
             data: {
                     params: {
                         pmtReqId: '',
-                        succYn: 'aa',
+                        succYN: '',
                     },
              },
 
@@ -65,6 +47,20 @@
                 },
             },
         })
+
+        let params = new URL(document.location).searchParams;
+
+        if(params.has("pmtReqId")){
+            let pmtReqId = params.get("pmtReqId")
+            vm.params.pmtReqId= pmtReqId
+        }
+        if(params.has("succYN")){
+            let succYn = param.get("succYN")
+            vm.params.succYN=succYn
+        }
+
+
+
     </script>
 
 </body>
